kubernetes/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend-service
spec:
  ports:
  - name: 5000-5000
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: backend
  type: ClusterIP
status:
  loadBalancer: {}
