kubernetes/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend-service
spec:
  ports:
  - name: 3000-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: frontend
  type: NodePort
status:
  loadBalancer: {}
