kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: two-tier-ingress
spec:
  rules:
  - host: frontend
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 3000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
